More code cleanup to use the new diamond config state.

--- a/src/Makefile.template.in
+++ b/src/Makefile.template.in
@@ -24,7 +24,6 @@ INSTALLDIR_INCLUDE=${INSTALLBASE}/include
 
 INCDIR += -I${BUILD_INC_PATH}
 
-
 LIBDIR += -L${BUILD_LIB_PATH}
 
 
@@ -107,7 +106,7 @@ endif
 
 
 
-TARGETS += copyheader 
+TARGETS += copyheader copybin
 
 #  Rebuild everything, which is the program "PROG" and its 
 #	subdirectories "SUBDIRS" 
@@ -154,6 +153,10 @@ copyheader:
 		cp -fuv $${entry} ${BUILD_INC_PATH}; \
 	done
 
+copybin:
+	@for entry in ${SHARED_BIN} ; do \
+		cp -fuv $${entry} ${BUILD_BIN_PATH}; \
+	done
 
 
 
@@ -162,9 +165,6 @@ copyheader:
 # this check iff they define their own installdirs target.
 
 install: installdirs
-ifneq ($(strip ${PROG}),)
-	${INSTALL_BIN} ${PROG} ${INSTALLDIR_BIN}
-endif
 ifneq ($(strip ${INSTALL_OTHERS}),)	
 	${INSTALL} ${INSTALL_OTHERS} ${INSTALLDIR}
 endif
@@ -176,6 +176,11 @@ endif
 ifneq ($(strip ${INSTALL_LIBS}),)	
 	@for entry in ${INSTALL_LIBS} ; do \
 		${INSTALL} $${entry} ${INSTALLDIR_LIB} ; \
+	done
+endif
+ifneq ($(strip ${INSTALL_BIN}),)	
+	@for entry in ${INSTALL_BIN} ; do \
+		${INSTALL} $${entry} ${INSTALLDIR_BIN} ; \
 	done
 endif
 
