--- a/src/Makefile.template.in
+++ b/src/Makefile.template.in
@@ -89,7 +89,7 @@ CLEAN_OTHERS += gmon.out core.* *.core filters.gviz filters.daVinci
 #
 # Objects to remove during "distclean".  For now just the .depend
 #
-DIST_OBJS += .depend
+DIST_OBJS += .depend Makefile
 
 %.o: %.S
 	${CPP} $(filter -I% -D%, ${INCDIR} ${CFLAGS}) $< | \
