More updates to support vpath, doesn't quite work yet ...

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -11,6 +11,9 @@
 #  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
 #
 ROOTDIR = @top_srcdir@
+VPATH = @srcdir@
+OBJROOT = @OBJROOT@
+
 
 SUBDIRS = common lib tools adiskd target
 
