--- a/src/tools/Makefile.in
+++ b/src/tools/Makefile.in
@@ -12,6 +12,9 @@
 #
 
 ROOTDIR = @top_srcdir@
+VPATH = @srcdir@
+OBJROOT = @OBJROOT@
+
 
 
 SUBDIRS = delattr initattr setattr showattr dlog dctl showgid 
