--- a/src/tools/delattr/Makefile.in
+++ b/src/tools/delattr/Makefile.in
@@ -13,6 +13,9 @@
 
 
 ROOTDIR = @top_srcdir@
+VPATH = @srcdir@
+OBJROOT = @OBJROOT@
+
 
 INCDIR += -I../../lib/libtools
 INCDIR += -I../../lib/libsearchlet
