--- a/src/tools/setattr/Makefile.in
+++ b/src/tools/setattr/Makefile.in
@@ -12,6 +12,9 @@
 #
 
 ROOTDIR = @top_srcdir@
+VPATH = @srcdir@
+OBJROOT = @OBJROOT@
+
 
 INCDIR += -I../../lib/libtools
 INCDIR += -I../../lib/libsearchlet
