--- a/src/tools/slowdown/Makefile.in
+++ b/src/tools/slowdown/Makefile.in
@@ -12,6 +12,9 @@
 #
 
 ROOTDIR = @top_srcdir@
+VPATH = @srcdir@
+OBJROOT = @OBJROOT@
+
 
 INCDIR += -I../../lib/libsearchlet
 INCDIR += -I../../lib/libdctl
