--- a/src/adiskd/Makefile.in
+++ b/src/adiskd/Makefile.in
@@ -21,9 +21,11 @@ LIBSEARCHLET_OBJS = lib_searchlet.o
 LIBSEARCHLET_EMUL_OBJS = $(LIBSEARCHLET_OBJS) filter_lib.o \
 			 filter_spec.o ls_background.o ls_device.o  
 LIBS += -ldl  -lpthread -lfilterexec -lfl -Wl,-whole-archive 
-LIBS += -lfilter -llog -lodisk -locache -Wl,-no-whole-archive
+LIBS += -lfilter -llog -lodisk -Wl,-no-whole-archive
 LIBS += -lsstub -ltools -ldctl -lm -lssl -lcrypto -ldconfig
+
 LIBDIR += -L/usr/lib -L/usr/local/ssl/lib
+
 SRCS = adiskd.c search_state.c
 OBJS = adiskd.o search_state.o
 
