--- a/src/common/Makefile.in
+++ b/src/common/Makefile.in
@@ -17,6 +17,7 @@ OBJROOT = @OBJROOT@
 
 SUBDIRS = 
 
+SHARED_HEADERS = diamond_consts.h  diamond_types.h  sys_attr.h
 
 include ${ROOTDIR}/Makefile.template
 
