--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -16,7 +16,7 @@ VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
 
-SUBDIRS =  libtools libdconfig libdctl liblog libodisk  libfilter libcache
+SUBDIRS =  libtools libdconfig libdctl liblog libodisk libfilter 
 SUBDIRS +=  libfilterexec libod transport libsearchlet
 
 include $(ROOTDIR)/Makefile.template
