--- a/src/lib/libfilterexec/Makefile.in
+++ b/src/lib/libfilterexec/Makefile.in
@@ -17,23 +17,24 @@ OBJROOT = @OBJROOT@
 
 
 CFLAGS_SO = $(CFLAGS) -fPIC
+
 LIBOBJS = filter_exec.o filter_spec.o fexec_stats.o fexec_misc.o 
-LIBOBJS += fexec_opt.o fexec_bypass.o
+LIBOBJS += fexec_opt.o fexec_bypass.o ocache.o cache_filter.o
+
 LIBSRCS = filter_exec.c filter_spec.c fexec_stats.c fexec_misc.c 
-LIBSRCS += fexec_opt.c fexec_bypass.c
+LIBSRCS += fexec_opt.c fexec_bypass.c ocache.c cache_filter.c
+
 LIBS += -ldl -lfl -lpthread -ltools -llog -lodisk
 LIBS +=  -lhstub  
-LIBDIR += -L../libtools -L../libfilter  -L../liblog -L../libodisk
-LIBDIR += -L../../transport/socket/hoststub
+
 SRCS = $(LIBSRCS)
 OBJS = $(LIBOBJS)
 
-SHARED_HEADERS = lib_filterexec.h
+SHARED_HEADERS = lib_filterexec.h lib_ocache.h
 
 CLEAN_OTHERS += filter_spec.c
 
 CFLAGS += -D_GNU_SOURCE
-CC = gcc
 
 # Compilation Targets
 #
@@ -42,9 +43,5 @@ TARGETS = libfilterexec.a
 
 include $(ROOTDIR)/Makefile.template 
 
-.c.o:
-	$(CC) $(CFLAGS) $(INCDIR) -c -o $*.o $<
 
-filter_spec.c: filter_spec.l
-	$(FLEX) -Pfspec -ofilter_spec.c filter_spec.l
 
