--- a/src/lib/libod/Makefile.in
+++ b/src/lib/libod/Makefile.in
@@ -18,12 +18,16 @@ OBJROOT = @OBJROOT@
 
 SRVOBJS = od_svc.o  od_server.o od_xdr.o
 SRVSRC = od_svc.c  od_server.c od_xdr.c
+
 TEST_OBJS = otest.o od_clnt.o od_xdr.o
 TEST_SRCS = otest.c od_clnt.c od_xdr.c
+
 APITEST_OBJS = apitest.o 
 APITEST_SRCS = apitest.c 
+
 LIBOBJS = od_api.o od_clnt.o od_xdr.o od_lookup.o
-LIBSRCS = od_api.c od_clnt.c od_xdr.c od_lookup.c
+LIBSRCS = od.h od_api.c od_clnt.c od_xdr.c od_lookup.c
+
 OBJS = $(LIBOBJS) $(TEST_OBJS) $(APITEST_OBJS) $(SRVOBJS)
 SRCS = $(LIBSRCS) $(TEST_SRCS) $(APITEST_SRCS) $(SRVSRC)
 
@@ -32,12 +36,11 @@ RPCGEN_SRCS = od.h od_svc.c od_xdr.c od_clnt.c
 SHARED_BIN = od_server populate-disk.pl apitest
 
 LIBS += -lodisk  -ltools -ldconfig -lpthread -ldctl -llog -lssl
-LIBDIR += -L../libodisk  -L../libtools -L../libdconfig -L../libdctl -L../liblog
 
 APILIBS += -lod -ltools -ldconfig
 APILIBDIR += -L../libod -L../libtools -L../libdconfig
 
-TARGETS = libod.a od_server otest apitest
+TARGETS = od.h libod.a od_server otest apitest
 
 CLEAN_OTHERS += $(RPCGEN_SRCS)
 
@@ -46,8 +49,13 @@ include $(ROOTDIR)/Makefile.template
 .c.o:
 	$(CC) $(CFLAGS) $(INCDIR) -c -o $*.o $<
 
+
+# huge hack for now XXX
 $(RPCGEN_SRCS): od.x
+	cp -fuv $(VPATH)/od.x od.x
+	cp -fuv $(VPATH)/lib_od.h lib_od.h
 	rpcgen od.x
+
 
 od_server: od.h $(SRVOBJS) 
 	$(CC) $(CFLAGS) -o od_server $(SRVOBJS) $(LIBDIR) $(LIBS)
@@ -55,6 +63,6 @@ od_server: od.h $(SRVOBJS)
 otest: od.h $(TEST_OBJS) 
 	$(CC) $(CFLAGS) -o otest $(TEST_OBJS) 
 
-apitest: $(APITEST_OBJS) 
+apitest: od.h $(APITEST_OBJS) 
 	$(CC) $(CFLAGS) -o apitest $(APITEST_OBJS) $(APILIBDIR) $(APILIBS)
 
