More hacks for the rpcgen

--- a/src/lib/libod/Makefile.in
+++ b/src/lib/libod/Makefile.in
@@ -42,7 +42,7 @@ APILIBDIR += -L../libod -L../libtools -L../libdconfig
 
 TARGETS = od.h libod.a od_server otest apitest
 
-CLEAN_OTHERS += $(RPCGEN_SRCS)
+CLEAN_OTHERS += $(RPCGEN_SRCS) ./od.x ./lib_od.h
 
 include $(ROOTDIR)/Makefile.template 
 
