--- a/src/lib/libodisk/Makefile.in
+++ b/src/lib/libodisk/Makefile.in
@@ -17,8 +17,8 @@ VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
 
-TEST_OBJS = odisk_test.o odisk_bench.o odisk_bench2.o
-TEST_SRCS = odisk_test.c odisk_bench.c odisk_bench2.c
+TEST_OBJS = odisk_test.o 
+TEST_SRCS = odisk_test.c 
 ATEST_SRCS = attr_test.c
 ATEST_OBJS = attr_test.o
 
@@ -52,13 +52,6 @@ include $(ROOTDIR)/Makefile.template
 
 odisk_test: $(TEST_OBJS) libodisk.a
 	$(CC) $(CFLAGS) -o odisk_test odisk_test.o $(LIBS) $(LIBDIR)
-
-
-odisk_bench: $(TEST_OBJS) libodisk.a
-	$(CC) $(CFLAGS) -o odisk_bench odisk_bench.o $(LIBS) $(LIBDIR)
-
-odisk_bench2: $(TEST_OBJS) libodisk.a
-	$(CC) $(CFLAGS) -o odisk_bench2 odisk_bench2.o $(LIBS) $(LIBDIR)
 
 attr_test: $(ATEST_OBJS) libodisk.a
 	$(CC) $(CFLAGS) -o attr_test $(ATEST_OBJS) $(LIBS) $(LIBDIR)
