Fix some problems with running configure in the local directory.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -11,6 +11,7 @@
 #  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
 #
 ROOTDIR = @top_srcdir@
+SRCDIR = @srcdir@
 VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
