--- a/src/Makefile.template.in
+++ b/src/Makefile.template.in
@@ -27,9 +27,10 @@ DATADIR=
 # Where the headers, libraries, and binaries should be placed during
 # the build process.
 #
-BUILD_LIB_PATH = $(OBJROOT)/target/lib
-BUILD_INC_PATH = $(OBJROOT)/target/include
-BUILD_BIN_PATH = $(OBJROOT)/target/bin
+BUILDROOT = @BUILDROOT@
+BUILD_LIB_PATH = $(BUILDROOT)/lib
+BUILD_INC_PATH = $(BUILDROOT)/include
+BUILD_BIN_PATH = $(BUILDROOT)/bin
 
 # The installation directories, changes these if you want to
 # have different installation paths.
@@ -47,35 +48,27 @@ INSTALLDIR_ETC=${INSTALLBASE}/etc
 ############################################################################
 vpath %.l ${VPATH}
 
+CPPFLAGS += @CPPFLAGS@
+CPPFLAGS += -I${BUILD_INC_PATH}
+CPPFLAGS += -I${SRCDIR}
+CPPFLAGS += -I.
 
-INCDIR += -I${BUILD_INC_PATH}
-INCDIR += -I$(SRCDIR)
-INCDIR += -I.
 
+LIBDIR += @LDFLAGS@
 LIBDIR += -L${BUILD_LIB_PATH}
 
 
 # general flags
-CFLAGS += -O2
-CFLAGS += -ggdb
-CFLAGS += -DDEBUG 
-CFLAGS += -Wall
-
-# un-comment if you want profiling
-#CFLAGS += -pg 
-
+CFLAGS += @CFLAGS@
 
 # The tools we want to use to compile
-FLEX = flex
-AWK = gawk
-CC = gcc
-CPLUSPLUS = g++
+LEX = @LEX@
+AWK = @AWK@
+CC = @CC@
+CPLUSPLUS = @CXX@
+
+# XXX bin install for these ???
 INSTALL = install
-
-#Just to go overboard and be sure
-CFLAGS += -D_REENTRANT
-CFLAGS += -D_THREAD_SAFE
-
 MKDIR = mkdir
 
 #
@@ -84,7 +77,7 @@ MKDIR = mkdir
 # files that have been generated.
 #
 
-CLEAN_OTHERS += gmon.out core.* *.core filters.gviz filters.daVinci
+CLEAN_OTHERS += gmon.out core.* *.core
 
 #
 # Objects to remove during "distclean".  For now just the .depend
@@ -92,22 +85,22 @@ CLEAN_OTHERS += gmon.out core.* *.core filters.gviz filters.daVinci
 DIST_OBJS += .depend Makefile
 
 %.o: %.S
-	${CPP} $(filter -I% -D%, ${INCDIR} ${CFLAGS}) $< | \
+	${CPP} $(filter -I% -D%, ${CPPFLAGS} ${CFLAGS}) $< | \
 		${AS} ${ALL_ASFLAGS} -o $@
 %.o: %.s
-	${CPP} -E $(filter -I% -D%, ${INCDIR} ${CFLAGS}) $< | \
+	${CPP} -E $(filter -I% -D%, ${CPPFLAGS} ${CFLAGS}) $< | \
 		${AS} ${ALL_ASFLAGS} -o $@
 	@${LD} -x -r $@
 	@${MV} a.out $@
 
 %.o: %.c
-	${CC} ${INCDIR} ${CFLAGS} -c $< -o $@
+	${CC} ${CPPFLAGS} ${CFLAGS} -c $< -o $@
 
 %.c: %.l
-	${FLEX} -o$@ $<
+	${LEX} -o$@ $<
 
 %.o: %.cc
-	${CPLUSPLUS} ${INCDIR} ${CFLAGS} -c $< -o $@
+	${CPLUSPLUS} ${CPPFLAGS} ${CFLAGS} -c $< -o $@
 
 %.a: $(LIBOBJS)
 	rm -f $@ 
@@ -154,7 +147,7 @@ all: ${SRCS} ${HSRCS} ${SSRCS} ${OSRCS} ${CYSRCS} ${HYSRCS} ${CLSRCS} ${PROG} ${
 #
 depend: 
 ifneq ($(strip ${SRCS}),)
-	${CC} -E -M ${INCDIR} ${CFLAGS} ${SRCS} > .depend
+	${CC} -E -M ${CPPFLAGS} ${CFLAGS} ${SRCS} > .depend
 endif
 	${do-subdirs}	
 
