--- a/src/lib/libfilter/Makefile.in
+++ b/src/lib/libfilter/Makefile.in
@@ -21,9 +21,8 @@ LIBOBJS = lib_filter.o
 SRCS = lib_filter.c
 OBJS = lib_filter.o
 
-SHARED_HEADERS = lib_filter.h
-ALL_CFLAGS = ${CFLAGS}
-ALL_IFLAGS = ${INCDIR}
+SHARED_HEADERS = lib_filter.h lib_filter_sys.h
+
 #
 # Compilation Targets
 #
@@ -32,6 +31,3 @@ TARGETS = libfilter.a
 
 include $(ROOTDIR)/Makefile.template
 
-
-.c.o:
-	$(CC) $(CFLAGS) $(INCDIR) -c -o $*.o $<
