--- a/src/tools/delattr/Makefile.in
+++ b/src/tools/delattr/Makefile.in
@@ -17,7 +17,7 @@ SRCDIR = @srcdir@
 VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
-LIBS += -lodisk -ltools -lssl
+LIBS += -lodisk -ltools -lpthread -llog -ldctl -lssl -ldconfig
 
 #
 # Compilation Targets
