--- a/src/tools/initattr/Makefile.in
+++ b/src/tools/initattr/Makefile.in
@@ -16,7 +16,8 @@ SRCDIR = @srcdir@
 VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
-LIBS += -lodisk -ltools -lssl
+LIBS += -lodisk -ltools -lpthread -llog -ldctl -lssl -ldconfig
+
 #
 # Compilation Targets
 #
