--- a/src/lib/libod/Makefile.in
+++ b/src/lib/libod/Makefile.in
@@ -45,7 +45,7 @@ TARGETS = od.h libod.a od_server otest apitest
 
 CLEAN_OTHERS += $(RPCGEN_SRCS) ./od.x ./lib_od.h
 
-include $(ROOTDIR)/Makefile.template 
+include $(OBJROOT)/Makefile.template 
 
 
 #
