--- a/src/lib/libsearchlet/Makefile.in
+++ b/src/lib/libsearchlet/Makefile.in
@@ -42,7 +42,7 @@ SHARED_HEADERS = lib_searchlet.h dctl_socket.h log_socket.h
 
 TARGETS = libsearchlet.a cli_test test.so 
 
-include $(ROOTDIR)/Makefile.template 
+include $(OBJROOT)/Makefile.template 
 
 
 #
