--- a/src/tools/Makefile.in
+++ b/src/tools/Makefile.in
@@ -21,5 +21,5 @@ SUBDIRS = delattr initattr setattr showattr dlog dctl showgid
 SUBDIRS += rem_group slowdown rand_idx
 
 
-include $(ROOTDIR)/Makefile.template
+include $(OBJROOT)/Makefile.template
 
