--- a/src/lib/transport/socket/hoststub/Makefile.in
+++ b/src/lib/transport/socket/hoststub/Makefile.in
@@ -36,7 +36,7 @@ SHARED_HEADERS = lib_hstub.h
 
 TARGETS = libhstub.a htest
 
-include $(ROOTDIR)/Makefile.template 
+include $(OBJROOT)/Makefile.template 
 
 
 
