--- a/src/tools/initattr/Makefile.in
+++ b/src/tools/initattr/Makefile.in
@@ -26,7 +26,7 @@ TARGETS = initattr
 SRCS = initattr.c
 OBJS = initattr.o
 
-include $(ROOTDIR)/Makefile.template
+include $(OBJROOT)/Makefile.template
 
 
 
