--- a/src/lib/transport/socket/storagestub/Makefile.in
+++ b/src/lib/transport/socket/storagestub/Makefile.in
@@ -17,7 +17,7 @@ VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
 LIBS += -lsstub -lpthread -ltools -ldctl -lodisk -ldconfig 
-LIBS += -ltools -lssl -lcrypto
+LIBS += -llog  -ltools -lssl -lcrypto
 
 LIBOBJS = sstub_api.o sstub_cntrl.o sstub_conn.o sstub_data.o
 LIBOBJS += sstub_listen.o sstub_log.o
