minor change for debian packaging

--- a/src/Makefile.template.in
+++ b/src/Makefile.template.in
@@ -69,7 +69,7 @@ CPLUSPLUS = @CXX@
 
 # XXX bin install for these ???
 INSTALL = install
-MKDIR = mkdir
+MKDIR = mkdir -p
 
 #
 # Other misc objects to remove during a make clean operation.
