--- a/src/debian/control
+++ b/src/debian/control
@@ -2,7 +2,7 @@ Source: diamond
 Section: unknown
 Priority: optional
 Maintainer: diamond <diamond@cs.cmu.edu>
-Build-Depends: debhelper (>= 4.0.0), autotools-dev, autoconf
+Build-Depends: debhelper (>= 4.0.0), autotools-dev, autoconf, libssl (>= 0.9.7)
 Build-Conflicts: autoconf2.13
 Standards-Version: 3.6.2
 
