compile position independent code for x86_64 and add error on implicit declaration

--- a/src/configure.in
+++ b/src/configure.in
@@ -13,7 +13,7 @@ AC_PROG_AWK
 AC_PROG_LEX
 
 # Add some cflags of our choosing
-CFLAGS="${CFLAGS} -Wall -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -ffast-math"
+CFLAGS="${CFLAGS} -Wall -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -fPIC -Werror-implicit-function-declaration -ffast-math"
 
 
 # Checks for libraries.
