--- a/src/lib/transport/socket/storagestub/Makefile.in
+++ b/src/lib/transport/socket/storagestub/Makefile.in
@@ -10,7 +10,17 @@
 #  ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS SOFTWARE CONSTITUTES
 #  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
 #
+#
+#
 
+
+#  Copyright (c) 2006 Larry Huston <larry@thehustons.net>
+#
+#  This software is distributed under the terms of the Eclipse Public
+#  License, Version 1.0 which can be found in the file named LICENSE.
+#  ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS SOFTWARE CONSTITUTES
+#  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
+#
 ROOTDIR = @top_srcdir@
 SRCDIR = @srcdir@
 VPATH = @srcdir@
@@ -35,7 +45,7 @@ OBJS = $(LIBOBJS) $(STEST_OBJS)
 
 SHARED_HEADERS = lib_sstub.h
 
-TARGETS = libsstub.a stest
+TARGETS = libsstub.a 
 
 include $(OBJROOT)/Makefile.template 
 
