--- a/src/lib/transport/socket/hoststub/Makefile.in
+++ b/src/lib/transport/socket/hoststub/Makefile.in
@@ -21,9 +21,9 @@ LIBOBJS = hstub_api.o hstub_log.o hstub_cntrl.o hstub_data.o hstub_main.o
 LIBOBJS += hstub_socket.o 
 
 HTEST_OBJS = htest.o
-LIBS += -lhstub -lpthread -ltools -ldctl -llog
+LIBS += -lhstub -lpthread -ltools -ldctl -llog -ldconfig -lssl
 
-SRCS = hstub_api.c  hstub_log.c hstub_cntrl.c hstub_data.c hstub_main.c htest.c
+SRCS = hstub_api.c  hstub_log.c hstub_cntrl.c hstub_data.c hstub_main.c 
 SRCS += hstub_socket.c
 
 OBJS = $(LIBOBJS) $(HTEST_OBJS)
@@ -34,15 +34,8 @@ SHARED_HEADERS = lib_hstub.h
 #
 
 
-TARGETS = libhstub.a htest
+TARGETS = libhstub.a 
 
 include $(OBJROOT)/Makefile.template 
-
-
-
-htest:  $(HTEST_OBJS) libhstub.a
-	$(CC) $(CFLAGS) -o htest $(HTEST_OBJS) $(LIBDIR) $(LIBS)
-
-
 
 
